--- a/Client-service.properties
+++ b/Client-service.properties
@@ -1,5 +1,5 @@
 server.port=1101
-
+name=shiva
 
 eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
 management.endpoints.web.exposure.include=*
